namespace INTERNAL_SOURCE_LOAD.Services
{
    public interface IDatabaseExecutor
    {
        void ExecuteQuery(string query);
    }

}
